# gekitsuu

./: README.md  gekitsuu.1  make_readme.py  pyproject.toml  rendered_manpage.md  requirements.txt
.github/workflows/: action.yml
readme/: __init__.py
templates/: manpage.md  readme.md  source_readme.md
