[tool.poetry]
name = "readme"
version = "0.1.0"
description = "My GitHub Profile"
authors = ["Adam Glenn <gekitsuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
Jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
